HelloUltraviolet/Fixtures/RejectedSource/FFI/HostedExportDiagnosticOwnership/Expected.uv
//! Expected diagnostic metadata for the HostedExportDiagnosticOwnership rejected-source specimen.

expectedDiagnostic("E-TYP-2623", "diagnostics.23.HostedExportDiagnosticOwnership")
